--- a/front/src/index.html
+++ b/front/src/index.html
@@ -12,15 +12,16 @@
 
 <body>
     <main class="limitar-conteudo">
+
         <section class="secao-1">
             <div class="box-card">
                 <div class="conteudo">
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
                         alt="pokemon-img" class="img">
-                    <span class="pokemon_api"></span>
                     <h1><span class="name">Articuno</span></h1>
                     <h2><span>Seed Pokémon</span></h2>
-                    <p><span class="types">Ice Flying</span></p>
+                    <p class="types"><span class="types">Ice Flying</span></p>
+                    <p>#<span class="pokemon_api"></span></p>
 
                     <div class="conteudo-sobre">
                         <div>
@@ -46,8 +47,39 @@
                 </div>
             </div>
         </section>
-        <section class="secao-2">
 
+
+        <section class="secao-2">
+            <!-- <div class="box-history">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
+                    alt="pokemon-img" class="h-img">
+                <div class="h-conteudo">
+                    <div>
+                        <h1><span class="h-name">Articuno</span></h1>
+                        <span class="h-pokemon_api"></span>
+                        <p><span>Seed Pokémon</span></p>
+                        <p><span class="h-types">Ice Flying</span></p>
+                    </div>
+                </div>
+                <div class="h-sobre">
+                    <div>
+                        <p><span class="-h-hp">90</span></p>
+                        <p><span>HP</span></p>
+                    </div>
+                    <div>
+                        <p><span class="h-attack">85</span></p>
+                        <p><span>attack</span></p>
+                    </div>
+                    <div>
+                        <p><span class="h-defense">100</span></p>
+                        <p><span>defense</span></p>
+                    </div>
+                    <div>
+                        <p><span class="h-speed">85</span></p>
+                        <p><span>speed</span></p>
+                    </div>
+                </div>
+            </div> -->
         </section>
 
     </main>
