--- a/front/src/index.html
+++ b/front/src/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon</title>
+    <title>Random Pokemon</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/main.js"></script>
+    <link rel="icon" type="image/x-icon" href="../assets/icons8-pokeball-2-16.png">
 </head>
 
 <body>
@@ -15,29 +17,48 @@
 
         <section class="secao-1">
             <div class="box-card">
+
+                <!-- <div onclick="openModal()" class="btn">Clique aqui</div> -->
+                <img src="../assets/editar.png" alt="" class="btn" onclick="openModal()">
+                <div id="modal-container" class="modal-container">
+                    <div class="modal">
+                        <button class="fechar" id="fechar">X</button>
+                        <h1>Escolha um nickname:</h1>
+                        <input type="text" placeholder="" class="btn-nickname">
+                        <button>alterar</button>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
                 <div class="conteudo">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
-                        alt="pokemon-img" class="img">
-                    <h1><span class="name">Articuno</span></h1>
+                    <img src="../assets/pokebola.png" alt="pokemon-img" class="img">
+                    <h1><span class="name">Example</span></h1>
                     <h2><span>Seed Pokémon</span></h2>
                     <p class="types"><span class="types">Ice Flying</span></p>
                     <p>#<span class="pokemon_api"></span></p>
 
                     <div class="conteudo-sobre">
                         <div>
-                            <p><span class="hp habilidades">90</span></p>
+                            <p><span class="hp habilidades">0</span></p>
                             <p><span>HP</span></p>
                         </div>
                         <div>
-                            <p><span class="attack habilidades">85</span></p>
+                            <p><span class="attack habilidades">0</span></p>
                             <p><span>attack</span></p>
                         </div>
                         <div>
-                            <p><span class="defense habilidades">100</span></p>
+                            <p><span class="defense habilidades">0</span></p>
                             <p><span>defense</span></p>
                         </div>
                         <div>
-                            <p><span class="speed habilidades">85</span></p>
+                            <p><span class="speed habilidades">0</span></p>
                             <p><span>speed</span></p>
                         </div>
                     </div>
@@ -50,40 +71,9 @@
 
 
         <section class="secao-2">
-            <!-- <div class="box-history">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/10.png"
-                    alt="pokemon-img" class="h-img">
-                <div class="h-conteudo">
-                    <div>
-                        <h1><span class="h-name">Articuno</span></h1>
-                        <span class="h-pokemon_api"></span>
-                        <p><span>Seed Pokémon</span></p>
-                        <p><span class="h-types">Ice Flying</span></p>
-                    </div>
-                </div>
-                <div class="h-sobre">
-                    <div>
-                        <p><span class="-h-hp">90</span></p>
-                        <p><span>HP</span></p>
-                    </div>
-                    <div>
-                        <p><span class="h-attack">85</span></p>
-                        <p><span>attack</span></p>
-                    </div>
-                    <div>
-                        <p><span class="h-defense">100</span></p>
-                        <p><span>defense</span></p>
-                    </div>
-                    <div>
-                        <p><span class="h-speed">85</span></p>
-                        <p><span>speed</span></p>
-                    </div>
-                </div>
-            </div> -->
         </section>
 
     </main>
-    <script src="./js/main.js"></script>
 </body>
 
 </html>
