--- a/front/src/index.html
+++ b/front/src/index.html
@@ -25,7 +25,7 @@
                         <button class="fechar" id="fechar">X</button>
                         <h1>Escolha um nickname:</h1>
                         <input type="text" placeholder="" class="btn-nickname">
-                        <button>alterar</button>
+                        <button onclick="UpdateName()">alterar</button>
                     </div>
                 </div>
 
