--- a/front/src/index.html
+++ b/front/src/index.html
@@ -24,8 +24,8 @@
                     <div class="modal">
                         <button class="fechar" id="fechar">X</button>
                         <h1>Escolha um nickname:</h1>
-                        <input type="text" placeholder="" class="btn-nickname">
-                        <button onclick="UpdateName()">alterar</button>
+                        <input type="text" placeholder="" class="input-nickname">
+                        <button onclick="UpdateName()" class="alterar">alterar</button>
                     </div>
                 </div>
 
@@ -38,7 +38,7 @@
 
 
                 <div class="conteudo">
-                    <img src="../assets/pokebola.png" alt="pokemon-img" class="img">
+                    <img src="../assets/pokebola.png" alt="pokemon-img" class="img efeito-flutuante-infinito">
                     <h1><span class="name">Example</span></h1>
                     <h2><span>Seed Pokémon</span></h2>
                     <p class="types"><span class="types">Ice Flying</span></p>
