efeito flutuante na listagem de pokemons

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -38,7 +38,7 @@
 
 
                 <div class="conteudo">
-                    <img src="../assets/pokebola.png" alt="pokemon-img" class="img efeito-flutuante-infinito">
+                    <img src="../assets/pokebola.png" alt="pokemon-img" class="img">
                     <h1><span class="name">Example</span></h1>
                     <h2><span>Seed Pokémon</span></h2>
                     <p class="types"><span class="types">Ice Flying</span></p>
